--- a/usr/style.css
+++ b/usr/style.css
@@ -62,7 +62,7 @@ body {
 	margin:10px auto;
 	padding:30px 10px;
 	width:330px;
-	background: #AAA;
+	background: #555;
 	border-radius: 5px;
 	color:#FFF;
 	font-weight: bold;
