--- a/usr/style.css
+++ b/usr/style.css
@@ -29,7 +29,7 @@ body {
 	display: block;
 	text-align: center;
 	line-height:50px;
-	font-size:25px;
+	font-size:25pt;
 	background-color: #449;
 	font-weight:bold;
 	border-bottom: 1px solid #227;
@@ -88,10 +88,11 @@ body {
 	background-color: #449;
 	color:#FFF;
 	width:350px;
-	height:15px;
+	height:25px;
 	font-size:12pt;
 	margin:0px;
 	padding:0px;
+	text-overflow:ellipsis;
 }
 
 #abox div {
