--- a/usr/style.css
+++ b/usr/style.css
@@ -89,10 +89,11 @@ body {
 	color:#FFF;
 	width:350px;
 	height:25px;
+	line-height: 25px;
 	font-size:12pt;
 	margin:0px;
 	padding:0px;
-	text-overflow:ellipsis;
+	overflow:hidden;text-overflow:ellipsis;white-space:nowrap;
 }
 
 #abox div {
