--- a/usr/style.css
+++ b/usr/style.css
@@ -109,7 +109,7 @@ body {
 	margin:10px auto 40px;
 	width:150px;
 	height:60px;
-	background-color: #33C;
+	background-color: #449;
 	color:#FFF;
 	cursor:pointer;
 }
