--- a/usr/style.css
+++ b/usr/style.css
@@ -29,7 +29,7 @@ body {
 	display: block;
 	text-align: center;
 	line-height:50px;
-	font-size:25pt;
+	font-size:33%;
 	background-color: #449;
 	font-weight:bold;
 	border-bottom: 1px solid #227;
