--- a/usr/style.css
+++ b/usr/style.css
@@ -15,6 +15,13 @@ body {
 	font-weight: bold;
 	color:#229;
 }
+
+.total {
+	color:#33A;
+	background-color: #FFF;
+	font-size: 1em;
+}
+
 #like {
 	display: block;
 	margin:0px, auto, 50px;
@@ -32,14 +39,13 @@ body {
 	font-size:1.5em;
 	background-color: #449;
 	font-weight:bold;
-	border-bottom: 1px solid #227;
-	overflow:hidden;
+	border-bottom: 2px solid #227;
 }
 
 #bar a {
 	margin:0px auto;
-	width:400px;
 	text-decoration: none;
+	overflow:hidden;
 	color: #FFF;
 }
 
@@ -78,6 +84,7 @@ body {
 	padding:30px 10px;
 	width:330px;
 	background: #555;
+	border-top : 2px solid #227;
 	border-bottom-left-radius: 6px;
 	border-bottom-right-radius: 6px;
 	color:#FFF;
@@ -95,7 +102,7 @@ body {
 	border-top-right-radius: 4px;
 	line-height: 20px;
 	font-size:10pt;
-	margin:0px;
+	margin:0px auto;
 	padding:0px 10px;
 	overflow:hidden;text-overflow:ellipsis;white-space:nowrap;
 }
@@ -129,12 +136,12 @@ body {
 	line-height: 60px;
 }
 
-#button :hover{
+.button :hover{
 	background-color: #117;
 	border-radius: 5px;
 	transition:all 0.1s ease 0s;
 }
-#button :active{
+.button :active{
 	background-color: #444;
 	color:#33C;
 	border-radius: 5px;
