--- a/usr/style.css
+++ b/usr/style.css
@@ -20,6 +20,7 @@ body {
 	color:#33A;
 	background-color: #FFF;
 	font-size: 1em;
+	display: none;
 }
 
 #like {
@@ -32,6 +33,7 @@ body {
 	top:0px;
 	left:0px;
 	right:0px;
+	height:50px;
 	padding:10px 100px;
 	display: block;
 	text-align: center;
@@ -40,12 +42,12 @@ body {
 	background-color: #449;
 	font-weight:bold;
 	border-bottom: 2px solid #227;
+	overflow:hidden;
 }
 
 #bar a {
 	margin:0px auto;
 	text-decoration: none;
-	overflow:hidden;
 	color: #FFF;
 }
 
@@ -137,9 +139,9 @@ body {
 }
 
 .button :hover{
-	background-color: #117;
+	background-color: #33A;
 	border-radius: 5px;
-	transition:all 0.1s ease 0s;
+	transition:all 0.2s ease 0s;
 }
 .button :active{
 	background-color: #444;
