--- a/usr/style.css
+++ b/usr/style.css
@@ -105,7 +105,8 @@ body {
 		width:50px;
 		background-color: #222;
 	}
-	.gragh {
+	.graph {
+		display: inline;
 		background-color: #CCF;
 		width:15px;
 	}
