--- a/usr/style.css
+++ b/usr/style.css
@@ -75,7 +75,7 @@ body {
 
 #abox {
 	display:none;
-	margin:0px auto 10px;
+	margin:0px auto 15px;
 	padding:30px 10px;
 	width:330px;
 	background: #555;
@@ -110,6 +110,8 @@ body {
 		border-bottom:1px solid #FFF;
 	}
 	.total {
+		text-align: center;
+		width:200px;
 		border: 0px;
 		color:#33A;
 		background-color: #FFF;
