--- a/usr/style.css
+++ b/usr/style.css
@@ -78,6 +78,7 @@ body {
 		font-family: '나눔고딕', '돋움';
 		display:block;
 		padding:0px;
+		color:#FFF;
 	}
 		.dbbox {
 			display:inline;
@@ -96,8 +97,8 @@ body {
 			display:inline;
 			width:15px;
 			height:15px;
+			line-height: 15px
 			font:bold 14px;
-			color:#FFF;
 		}
 		.dbbutton:hover {
 			background-color: #66B;
