--- a/usr/style.css
+++ b/usr/style.css
@@ -73,31 +73,31 @@ body {
 		margin:10px auto;
 		display:none;
 		color:#444;
+		line-height: 15px;
 }
 	.dbline {
 		font-family: '나눔고딕', '돋움';
 		display:block;
 		padding:0px;
 		color:#FFF;
+		background-color: #AAC;
+		border:none;
+		border-radius: 7px;
+		height:15px;
+		width: 160px;
+		font-size: 13px;
+		line-height: 15px;
 	}
 		.dbbox {
 			display:inline;
 			padding:0px 10px;
-			background-color: #AAC;
-			border:none;
-			border-radius: 7px;
-			height:15px;
-			width: 160px;
-			line-height: 15px;
-			font-size: 13px;
+			
 		}
 		.dbbutton {
-			background-color: #338;
-			border-radius: 7px;
+			border:1px solid #CCF;
 			display:inline;
 			width:15px;
 			height:15px;
-			line-height: 15px
 			font:bold 14px;
 		}
 		.dbbutton:hover {
