--- a/usr/style.css
+++ b/usr/style.css
@@ -76,7 +76,7 @@ body {
 		line-height: 15px;
 }
 	.dbline {
-		margin:10px auto;
+		margin:5px auto;
 		font-family: '나눔고딕', '돋움';
 		display:block;
 		padding:0px;
@@ -104,12 +104,12 @@ body {
 		}
 		.dbbutton {
 			border-radius: 7px;
-			border:1px solid #CCF;
+			background-color: #CCF;
 			display:inline;
 			line-height: 15px;
 			width:15px;
 			height:15px;
-			font:bold 15px;
+			font:bold 17px;
 		}
 		.dbbutton:hover {
 			background-color: #66B;
