--- a/usr/style.css
+++ b/usr/style.css
@@ -70,6 +70,8 @@ body {
 		}
 
 #desc {
+	padding:13px;
+	border-radius: 5px;
 	background-color: #DDD;
 }
 
@@ -95,9 +97,9 @@ body {
 		.dbbox {
 			display:inline;
 			color:#FFF;
-			background-color: #AAC;
+			background-color: #DDF;
 			border:none;
-			border-radius: 9px;
+			border-radius: 2px;
 			height:15px;
 			width: 160px;
 			font-size: 13px;
