--- a/usr/style.css
+++ b/usr/style.css
@@ -96,7 +96,7 @@ body {
 	}
 		.dbbox {
 			display:inline;
-			color:#FFF;
+			color:#AAC;
 			border:none;
 			border-left: 1px solid #444;
 			height:15px;
