--- a/usr/style.css
+++ b/usr/style.css
@@ -100,7 +100,8 @@ body {
 			color:#FFF;
 			border:none;
 			background-color: #AAC;
-			border-left: 1px solid #444;
+			border-bottom: 1px solid #FFF;
+			border-right: 1px solid #FFF;
 			height:15px;
 			margin:0px 4px 0px 0px;
 			width: 150px;
