--- a/usr/style.css
+++ b/usr/style.css
@@ -47,7 +47,7 @@ body {
 	display: block;
 	text-align:center;
 	background-color: #FFF;
-	border-radius: 5px;
+	border-radius: 30px;
 	line-height: 1.5;
 }
 
@@ -72,7 +72,7 @@ body {
 #desc {
 	padding:13px;
 	border-radius: 5px;
-	background-color: #DDD;
+	background-color: #EEF;
 	margin:15px auto;
 }
 
@@ -87,11 +87,11 @@ body {
 		display:block;
 		padding:0px;
 		color:#FFF;
-		background-color: #AAC;
+		background-color: #77B;
 		border:none;
-		border-radius: 10px;
+		border-radius: 8px;
 		height:20px;
-		width: 200px;
+		width: 280px;
 		font-size: 13px;
 		line-height: 20px;
 	}
@@ -99,35 +99,36 @@ body {
 			display:inline;
 			color:#FFF;
 			border:none;
-			background-color: #AAC;
+			background-color: #EEF;
 			border-bottom: 1px solid #FFF;
 			border-right: 1px solid #FFF;
 			height:15px;
-			margin:0px 4px 0px 0px;
-			width: 150px;
+			margin:0px 0px 0px 0px;
+			width: 200px;
 			font-size: 13px;
 			line-height: 15px;
 			padding:0px 10px;
-			
+
 		}
 		.dbbutton {
-			border-radius: 7px;
-			background-color: #CCF;
+			border-radius: 2px;
+			background-color: #66B;
 			display:inline;
 			line-height: 15px;
-			width:15px;
+			width:80px;
 			height:15px;
+			padding: 0 8px;
 			font:bold 17px;
 		}
 		.dbbutton:hover {
-			background-color: #66B;
+			background-color: #99D;
 			transition:all 0.2s ease 0s;
 			cursor:pointer;
 		}
 		.dbbutton:active {
 			background-color: #555;
 		}
-		
+
 
 
 
