fix my trivial mistake

--- a/usr/style.css
+++ b/usr/style.css
@@ -97,7 +97,7 @@ body {
 	}
 		.dbbox {
 			display:inline;
-			color:#FFF;
+			color:#222;
 			border:none;
 			background-color: #EEF;
 			border-bottom: 1px solid #FFF;
